--- a/app/scss/_styles.scss
+++ b/app/scss/_styles.scss
@@ -4,3 +4,59 @@
 
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Montserrat';
+}
+
+h1 {
+    font-family: 'HelveticaNeueCyr';
+    font-weight: 900;
+    font-size: 38px;
+}
+
+h2 {
+    font-weight: 800;
+    font-size: 30px;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 14px;
+}
+
+h4 {
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+h1,
+h2 {
+    line-height: 1.7;
+}
+
+h3,
+h4 {
+    line-height: 2.5;
+}
+
+h1,
+h2,
+h3 {
+    text-transform: uppercase;
+}
+
+ul,
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    display: block;
+}
