--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -70,6 +70,7 @@
 
         &-rights {
             font-weight: 600;
+            line-height: 1.6;
             text-align: center;
 
             color: $description-color;
