--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,10 +1,11 @@
 .about-section {
     display: flex;
 
-    &-content {
-        max-width: 50%;
+    max-width: 1920px;
 
-        padding: 75px 100px 50px 100px;
+    margin: 0 auto;
+
+    &-content {
 
         &__title {
             margin-bottom: 20px;
@@ -18,6 +19,7 @@
             font-size: 16px;
             font-weight: 300;
             line-height: 1.6;
+            text-align: justify;
 
             margin-bottom: 60px;
         }
@@ -42,6 +44,11 @@
                 box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
             }
 
+            &__link {
+                display: flex;
+                align-items: center;
+            }
+
             &__icon {
                 width: 20px;
                 height: 20px;
@@ -61,11 +68,10 @@
     }
 
     &-img {
-        max-width: 50%;
 
         &__image {
             max-width: 100%;
-            height: auto;
+            height: 570px;
 
             object-fit: cover;
         }
