--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -1,4 +1,6 @@
 .portfolio-section {
+    position: relative;
+
     padding: 70px 0;
 
     background-color: $portfolio-section-color;
@@ -24,17 +26,12 @@
 
     &-content {
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        justify-content: center;
         align-items: center;
 
         &-block {
             position: relative;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            max-width: 370px;
 
             &:hover {
 
@@ -49,7 +46,7 @@
 
             &__image {
                 max-width: 100%;
-                height: auto;
+                height: 270px;
 
                 object-fit: cover;
 
@@ -82,6 +79,82 @@
                         }
                     }
                 }
+            }
+        }
+    }
+
+    &-modal {
+        display: none;
+        
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+
+        width: 570px;
+        height: auto;
+
+        padding: 40px;
+
+        background-color: #a5a5a5;
+
+        &-btn-close {
+            position: absolute;
+            top: 20px;
+            right: 0;
+
+            width: 40px;
+            height: 40px;
+
+            &__icon {
+                width: 20px;
+                height: 20px;
+            }
+        }
+
+        &__title {
+            font-size: 20px;
+        }
+
+        &__description {
+            margin-bottom: 20px;
+        }
+
+        &-list {
+            margin-bottom: 20px;
+
+            &__item {
+                font-family: 'Montserrat';
+                font-weight: 600;
+                line-height: 1.2;
+                text-transform: uppercase;
+            }
+        }
+
+        &-btn {
+            width: 120px;
+            height: 40px;
+
+            margin: 0 auto;
+
+            font-family: 'Montserrat';
+            font-size: 12px;
+            font-weight: 600;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+
+            border: none;
+
+            cursor: pointer;
+
+            transition: box-shadow .25s ease-in-out;
+
+            background-color: $brand-color;
+            color: #fff;
+
+            &:hover {
+                box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
             }
         }
     }
