--- a/app/scss/_skills.scss
+++ b/app/scss/_skills.scss
@@ -1,28 +1,25 @@
 .skills-section {
     display: flex;
 
+    max-width: 1920px;
+
+    margin: 0 auto;
+
     &-img {
-        max-width: 50%;
 
         &__image {
             max-width: 100%;
-            height: auto;
+            height: 570px;
 
             object-fit: cover;
         }
     }
 
     &-content {
-        max-width: 50%;
-
-        padding: 20px 50px 0 50px;
+        padding: 30px 50px;
 
         &__title {
             margin-bottom: 20px;
-        }
-
-        &__line {
-            margin-bottom: 30px;
         }
 
         &-block {
@@ -30,9 +27,11 @@
             &-skill {
                 position: relative;
 
-                max-width: 470px;
+                margin-bottom: 16px;
 
-                margin-bottom: 20px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
 
                 &__title {
                     margin-bottom: 10px;
@@ -47,7 +46,7 @@
                 &-progress-back {
                     position: relative;
 
-                    width: 100%;
+                    max-width: 100%;
                     height: 3px;
 
                     background-color: $progress-color;
