--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -94,7 +94,7 @@
             font-size: 18px;
             font-weight: 300;
 
-            margin-bottom: 400px;
+            padding-bottom: 400px;
 
             animation: header-position-animation 2s;
 
@@ -110,6 +110,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            transform: translateX(-50%);
 
             width: 40px;
             height: 40px;
