--- a/app/scss/_contacts.scss
+++ b/app/scss/_contacts.scss
@@ -62,6 +62,10 @@
                         margin-left: 10px;
 
                         color: $description-color;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
