--- a/app/scss/_keyframes.scss
+++ b/app/scss/_keyframes.scss
@@ -14,13 +14,17 @@
     0% {
         color: transparent;
     }
-    
+
     50% {
         color: transparent;
     }
 }
 
 @keyframes button-move-animation {
+    0% {
+        transform: translateY(0);
+    }
+    
     50% {
         transform: translateY(-20px);
     }
