--- a/app/css/main.css
+++ b/app/css/main.css
@@ -62,6 +62,28 @@ img {
   display: block;
 }
 
+@-webkit-keyframes sk-circle-bounce-delay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes sk-circle-bounce-delay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
 @-webkit-keyframes header-name-animation {
   0% {
     margin-bottom: -40px;
@@ -142,6 +164,170 @@ img {
   background-color: #000;
 }
 
+.preloader-section {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1500;
+  width: 100%;
+  height: 100vh;
+  background-color: #ebebeb;
+}
+
+.preloader-section .sk-circle-bounce {
+  width: 4em;
+  height: 4em;
+  position: relative;
+  margin: auto;
+}
+
+.preloader-section .sk-circle-bounce .sk-child {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.preloader-section .sk-circle-bounce .sk-child:before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  width: 15%;
+  height: 15%;
+  background-color: #40546a;
+  border-radius: 100%;
+  -webkit-animation: sk-circle-bounce-delay 1.2s infinite ease-in-out both;
+  animation: sk-circle-bounce-delay 1.2s infinite ease-in-out both;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-2 {
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-2:before {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-3 {
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  transform: rotate(60deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-3:before {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-4 {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-4:before {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-5 {
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-5:before {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-6 {
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  transform: rotate(150deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-6:before {
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-7 {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-7:before {
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-8 {
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  transform: rotate(210deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-8:before {
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-9 {
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  transform: rotate(240deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-9:before {
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-10 {
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-10:before {
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-11 {
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  transform: rotate(300deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-11:before {
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-12 {
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  transform: rotate(330deg);
+}
+
+.preloader-section .sk-circle-bounce .sk-circle-12:before {
+  -webkit-animation-delay: -0.1s;
+  animation-delay: -0.1s;
+}
+
 .header-section {
   background: url(../img/header-bg.png) no-repeat top center/cover;
 }
@@ -155,22 +341,13 @@ img {
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
   padding: 40px 0;
 }
 
 .header-section-nav-list {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
 .header-section-nav-list__item {
@@ -187,12 +364,27 @@ img {
   -webkit-transition: all .5s ease-in-out;
   -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  color: #4d4d4d;
 }
 
 .header-section-nav-list__link:hover {
   background-color: #000;
   color: #fff;
+}
+
+.header-section-nav .active {
+  right: 0;
+}
+
+.header-section-nav-btn {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  cursor: pointer;
+}
+
+.header-section-nav-btn__icon {
+  width: 20px;
+  height: 20px;
 }
 
 .header-section-nav-menu {
@@ -210,26 +402,6 @@ img {
   background-color: #4d4d4d;
 }
 
-.header-section-nav-menu:hover .header-section-nav-menu__line:first-child {
-  -webkit-transform: rotate(45deg) translateY(8px);
-  -ms-transform: rotate(45deg) translateY(8px);
-  transform: rotate(45deg) translateY(8px);
-}
-
-.header-section-nav-menu:hover .header-section-nav-menu__line:nth-child(2) {
-  opacity: 0;
-}
-
-.header-section-nav-menu:hover .header-section-nav-menu__line:last-child {
-  -webkit-transform: rotate(-45deg) translateY(-8px);
-  -ms-transform: rotate(-45deg) translateY(-8px);
-  transform: rotate(-45deg) translateY(-8px);
-}
-
-.header-section-nav .active {
-  display: block;
-}
-
 .header-section-content {
   padding: 80px 0 40px 0;
 }
@@ -239,6 +411,8 @@ img {
   margin-bottom: 20px;
   -webkit-animation: header-name-animation 2s;
   animation: header-name-animation 2s;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
   color: #4d4d4d;
 }
 
@@ -248,6 +422,8 @@ img {
   padding-bottom: 400px;
   -webkit-animation: header-position-animation 2s;
   animation: header-position-animation 2s;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
   color: #8d8f8f;
 }
 
@@ -299,6 +475,43 @@ img {
 }
 
 .header-section-content-button__icon {
+  width: 15px;
+  height: 15px;
+}
+
+.header-section .btn-scroll-up {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  z-index: 500;
+  -webkit-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  display: none;
+}
+
+.header-section .btn-scroll-up__link {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.header-section .btn-scroll-up__icon {
   width: 15px;
   height: 15px;
 }
@@ -525,6 +738,11 @@ img {
   display: none;
 }
 
+.portfolio-section-content-block-icon__link {
+  width: 100%;
+  height: 100%;
+}
+
 .portfolio-section-content-block-icon__icon {
   width: 40px;
   height: 40px;
@@ -542,22 +760,24 @@ img {
 
 .portfolio-section-modal {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 570px;
+  max-width: 570px;
   height: auto;
   padding: 40px;
-  background-color: #a5a5a5;
+  z-index: 150;
+  background-color: #f5eee0;
 }
 
 .portfolio-section-modal-btn-close {
   position: absolute;
-  top: 20px;
-  right: 0;
+  top: 30px;
+  right: 20px;
+  cursor: pointer;
   width: 40px;
   height: 40px;
 }
@@ -569,6 +789,8 @@ img {
 
 .portfolio-section-modal__title {
   font-size: 20px;
+  line-height: 1.2;
+  margin-bottom: 20px;
 }
 
 .portfolio-section-modal__description {
@@ -576,12 +798,13 @@ img {
 }
 
 .portfolio-section-modal-list {
-  margin-bottom: 20px;
+  margin: 0 0 20px 20px;
 }
 
 .portfolio-section-modal-list__item {
+  list-style-type: disc;
   font-family: 'Montserrat';
-  font-weight: 600;
+  font-weight: 300;
   line-height: 1.2;
   text-transform: uppercase;
 }
@@ -596,6 +819,7 @@ img {
   letter-spacing: 1px;
   text-transform: uppercase;
   border: none;
+  outline: none;
   cursor: pointer;
   -webkit-transition: -webkit-box-shadow .25s ease-in-out;
   transition: -webkit-box-shadow .25s ease-in-out;
@@ -609,6 +833,10 @@ img {
 .portfolio-section-modal-btn:hover {
   -webkit-box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
+}
+
+.portfolio-section .active {
+  display: block;
 }
 
 .contacts-section {
@@ -794,9 +1022,38 @@ img {
 
 @media only screen and (min-width: 320px) {
   .header-section-nav-list {
-    display: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 1000;
+    background-color: #4d4d4d;
+  }
+  .header-section-nav-list__link {
+    color: #fff;
   }
   .header-section-nav-menu {
+    display: block;
+  }
+  .header-section-nav-btn {
     display: block;
   }
   .about-section {
@@ -876,8 +1133,26 @@ img {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    position: static;
+    height: 100%;
+    background-color: transparent;
+  }
+  .header-section-nav-list__link {
+    color: #4d4d4d;
   }
   .header-section-nav-menu {
+    display: none;
+  }
+  .header-section-nav-btn {
     display: none;
   }
   .about-section {
