--- a/app/scss/_keyframes.scss
+++ b/app/scss/_keyframes.scss
@@ -1,3 +1,13 @@
+@keyframes sk-circle-bounce-delay {
+    0%, 80%, 100% {
+        transform: scale(0);
+    }
+
+    40% {
+        transform: scale(1);
+    }
+}
+
 @keyframes header-name-animation {
     0% {
         margin-bottom: -40px;
