--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -63,6 +63,11 @@
                 transform: translate(-50%, -50%);
 
                 display: none;
+
+                &__link {
+                    width: 100%;
+                    height: 100%;
+                }
                 
                 &__icon {
                     width: 40px;
@@ -86,23 +91,27 @@
     &-modal {
         display: none;
         
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
 
         transform: translate(-50%, -50%);
 
-        width: 570px;
+        max-width: 570px;
         height: auto;
 
         padding: 40px;
 
-        background-color: #a5a5a5;
+        z-index: 150;
+
+        background-color: #f5eee0;
 
         &-btn-close {
             position: absolute;
-            top: 20px;
-            right: 0;
+            top: 30px;
+            right: 20px;
+
+            cursor: pointer;
 
             width: 40px;
             height: 40px;
@@ -115,6 +124,8 @@
 
         &__title {
             font-size: 20px;
+            line-height: 1.2;
+            margin-bottom: 20px;
         }
 
         &__description {
@@ -122,11 +133,13 @@
         }
 
         &-list {
-            margin-bottom: 20px;
+            margin: 0 0 20px 20px;
 
             &__item {
+                list-style-type: disc;
+
                 font-family: 'Montserrat';
-                font-weight: 600;
+                font-weight: 300;
                 line-height: 1.2;
                 text-transform: uppercase;
             }
@@ -145,6 +158,7 @@
             text-transform: uppercase;
 
             border: none;
+            outline: none;
 
             cursor: pointer;
 
@@ -157,5 +171,9 @@
                 box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
             }
         }
+    }
+
+    .active {
+        display: block;
     }
 }
