--- a/app/css/main.css
+++ b/app/css/main.css
@@ -328,6 +328,15 @@ img {
   animation-delay: -0.1s;
 }
 
+.scroll-section-bar {
+  position: fixed;
+  top: 0;
+  width: 0%;
+  height: 5px;
+  z-index: 10000;
+  background-color: #40546a;
+}
+
 .header-section {
   background: url(../img/header-bg.png) no-repeat top center/cover;
 }
