--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -19,3 +19,7 @@ $github-color: #6e5494;
 $post-color: #e4da4e;
 
 $preloader-bg-color: #ebebeb;
+
+$modal-creativia-bg-color: #f82a56;
+$modal-bicycle-bg-color: #64c29e;
+$modal-waxom-bg-color: #c7b299;
