--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -143,11 +143,11 @@
 
         box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
 
-        z-index: 500;
+        z-index: 3500;
 
-        transition: all .5s ease-in-out;
+        opacity: 0;
 
-        display: none;
+        transition: all .25s ease-in-out;
 
         &__link {
             display: flex;
