--- a/app/scss/_preloader.scss
+++ b/app/scss/_preloader.scss
@@ -9,6 +9,10 @@
     width: 100%;
     height: 100vh;
 
+    opacity: 1;
+
+    transition: opacity 1s ease-in-out;
+
     background-color: $preloader-bg-color;
 
     .sk-circle-bounce {
