--- a/app/scss/_skills.scss
+++ b/app/scss/_skills.scss
@@ -57,7 +57,7 @@
                     top: 0;
                     left: 0;
 
-                    width: 100px;
+                    width: 0%;
                     height: 3px;
 
                     background-color: $brand-color;
